--- a/wallet-tracker/src/styles.css
+++ b/wallet-tracker/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: Alata-Regular;
+  src: url(/assets/fonts/Alata-Regular.ttf) format('truetype');
+  font-weight: 400;
+}
+@font-face {
+  font-family: Space-Grotesk;
+  src: url(/assets/fonts/SpaceGrotesk-VariableFont_wght.ttf) format('truetype');
+  font-weight: 400;
+}
