--- a/wallet-tracker/src/app/auth/auth.component.css
+++ b/wallet-tracker/src/app/auth/auth.component.css
@@ -49,6 +49,12 @@ input{
   cursor:pointer;
   width: 28.65px;
 }
+.login-btn{
+  position: relative;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
 .login-btn button{
   width: 349.1px;
   height: 55px;
@@ -58,4 +64,13 @@ input{
   border-radius: 10px;
   margin-top: 34.76px;
   cursor:pointer;
+}
+.switchLoginModeButton{
+  position: absolute;
+  top:100px;
+}
+.login-btn .modeHighlight{
+  color:#2e9097;
+  cursor:pointer;
+
 }
