cards are styled, section components created

--- a/wallet-tracker/src/app/main/cards/cards.component.html
+++ b/wallet-tracker/src/app/main/cards/cards.component.html
@@ -1,11 +1,11 @@
-<ul class="cards">§
+<ul class="cards">
   <li *ngFor="let card of cards">
-    <button type="button" [class.selected]="card === selectedCard"  (click)="onSelect(card)">
+    <div class="overall" [class.selected]="card === selectedCard"  (click)="onSelect(card)">
     <h3 class="typeName">{{card.typeName}}</h3>
     <h3 class="amount">{{card.amount}}</h3>
-    <span>
+    <span class="currency">
       <img [src]="card.currencyImagePath" alt="currency" style="max-height: 50px;">
     </span>
-  </button>
+  </div>
   </li>
 </ul>
