--- a/wallet-tracker/src/app/main/main.component.html
+++ b/wallet-tracker/src/app/main/main.component.html
@@ -1,13 +1,15 @@
 <div id="main">
+
   <div class="cards">
+    <h1>Wallet Tracker</h1>
     <app-cards></app-cards>
   </div>
-  <div class="transactions">
-
+  <div class="main-center">
+    <app-main-center></app-main-center>
   </div>
 
   <div class="right-bar">
-
+    <h1>asd</h1>
   </div>
 </div>
 
