--- a/wallet-tracker/src/app/main/cards/cards.component.css
+++ b/wallet-tracker/src/app/main/cards/cards.component.css
@@ -1,3 +1,49 @@
+*{
+  text-decoration: none;
+  list-style: none;
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  color: #fff;
+}
 .selected{
-  
+
+}
+h3{
+  font-family: Space-Grotesk;
+}
+.cards{
+  position: relative;
+  display: block;
+}
+li{
+  width: 430px;
+  height: 184px;
+  /* background-image: url('src/assets/images/cardBG.png'); */
+  background: url('src/assets/images/cardBG.png');
+  background-size: cover;
+  background-position: center;
+  filter: drop-shadow(5px 10px 20px rgba(0, 0, 0, 0.25));
+  border-radius: 10px;
+  margin-top: 50px;
+}
+button{
+  all: unset;
+  width: 430px;
+
+
+}
+.typeName{
+  font-size: 32px;
+  padding: 21px 0 0 23px;
+}
+.amount{
+  font-size: 53px;
+  padding:17px 0 0 23px;
+
+}
+.currency{
+  position: absolute;
+  left: 357px;
+  top:26px;
 }
