--- a/wallet-tracker/src/app/main/main-center/main-center.component.html
+++ b/wallet-tracker/src/app/main/main-center/main-center.component.html
@@ -9,7 +9,7 @@
     <div *ngIf="!selectedSection" class="">
       <ul>
         <li class="transaction" *ngFor="let transaction of transactions; let i=index" (click)="onEditTransaction()">
-          {{transaction.title}}
+          {{transaction.title}} {{transaction.description}}
         </li>
       </ul>
     </div>
