--- a/wallet-tracker/src/styles.css
+++ b/wallet-tracker/src/styles.css
@@ -10,7 +10,7 @@
   font-weight: 400;
 }
 *{
-  font-family: Alata-Regular;
+  font-family: Space-Grotesk;
 }
 *,
 *::before,
@@ -18,4 +18,6 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+  padding: 0;
+  margin: 0;
 }
