page reload when Site Name is clicked

--- a/wallet-tracker/src/app/main/main.component.html
+++ b/wallet-tracker/src/app/main/main.component.html
@@ -1,7 +1,7 @@
 <div id="main">
 
   <div class="cards">
-    <h1>Wallet Tracker</h1>
+    <h1 (click)="siteName()">Wallet Tracker</h1>
     <app-cards></app-cards>
   </div>
   <div class="main-center">
