--- a/wallet-tracker/src/app/main/main-center/main-center.component.css
+++ b/wallet-tracker/src/app/main/main-center/main-center.component.css
@@ -31,6 +31,9 @@
   position: absolute;
   left: 18px;
 }
+.transactions{
+  cursor: pointer;
+}
 .trCategory{
   font-size: 20px;
   font-weight: 700;
