refactor: get transaction from firebase backend

--- a/src/app/main/main-center/sec-categories/sec-categories.component.html
+++ b/src/app/main/main-center/sec-categories/sec-categories.component.html
@@ -1,1 +1,20 @@
-<p>sec-categories works!</p>
+<!-- <ul>
+  <li class="transactions" *ngFor="let transaction of transactions; let i=index" (click)="onEditTransaction()">
+    <div class="trBox"> -->
+      <!-- 'tr' is shortcut for transaction -->
+      <!-- <div class="trCategory">
+        <p>{{ transaction.categoryType}}</p>
+      </div>
+      <div class="trRest">
+        <p class="trTitle">{{transaction.title}}</p>
+        <div class="boxBottom">
+          <img [src]="transaction.income?'assets/icons/income.png':'assets/icons/expense.png'" alt="money flow icon" style="max-height: 30px;">
+          <p class="moneyFlow">{{transaction.income?'Income':'Expense'}}</p>
+          <p class="dot">·</p>
+          <p>{{transaction.date}}</p>
+        </div>
+        <p class="trAmount">{{transaction.amount}}$</p>
+      </div>
+    </div>
+  </li>
+</ul> -->
