--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,4 @@
 <div id="main">
-
   <div class="cards">
     <h1 (click)="siteName()">Wallet Tracker</h1>
     <app-cards></app-cards>
@@ -12,4 +11,6 @@
     <h1>asd</h1>
   </div>
 </div>
-
+<div class="tr-edit">
+  <app-tr-edit></app-tr-edit>
+</div>
