--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,6 @@
   padding: 0;
   margin: 0;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
