--- a/src/app/main/sidebar/tr-edit/tr-edit.component.html
+++ b/src/app/main/sidebar/tr-edit/tr-edit.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <h3>Edit Transaction</h3>
   <div class="toggle">
     <div class="expense-option">
@@ -42,4 +42,4 @@
     </div>
   </form>
 
-</div>
+</div> -->
