--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,7 +8,9 @@
   </div>
 
   <div class="right-bar">
-    <h1>asd</h1>
+    <h1>
+      <button (click)="logOut()">Logout</button>
+    </h1>
   </div>
 </div>
 <div class="tr-edit">
