--- a/src/app/main/sidebar/tr-edit/tr-edit.component.css
+++ b/src/app/main/sidebar/tr-edit/tr-edit.component.css
@@ -2,6 +2,12 @@
   width: 39vw;
   height: 100vh;
   background-color: #fff;
+  margin-top: 39.25px;
+  margin-left: 34.44px;
+}
+.sectionName{
+  font-size: 32px;
+
 }
 
 
