--- a/src/app/main/sidebar/tr-edit/tr-edit.component.html
+++ b/src/app/main/sidebar/tr-edit/tr-edit.component.html
@@ -1,17 +1,17 @@
 <div class="container">
-  <h3>Edit Transaction</h3>
+  <h2 class="sectionName">Edit Transaction</h2>
   <div class="toggle">
-    <div class="expense-option">
-      <img src="assets/icons/expense.png" alt="expense icon" style="width: 35px;">
-      <button [class.active]="selectedOption === 'option1'" (click)="toggleOption('option1')">Expenses</button>
-    </div>
-    <div class="income-option">
-      <img src="assets/icons/income.png" alt="income icon" style="width: 35px;">
-      <button [class.active]="selectedOption === 'option2'" (click)="toggleOption('option2')">Income</button>
-    </div>
   </div>
   <form [formGroup]="transactionForm" (ngSubmit)="onSubmit()">
     <div class="title tr-edit">
+      <div class="expense-option" (click)="incomeOrExpense('expense')">
+        <img src="assets/icons/expense.png" alt="expense icon" style="width: 35px;">
+        <a [class.active]="selectedOption === 'option1'" (click)="toggleOption('option1')">Expenses</a>
+      </div>
+      <div class="income-option" (click)="incomeOrExpense('income')">
+        <img src="assets/icons/income.png" alt="income icon" style="width: 35px;">
+        <a [class.active]="selectedOption === 'option2'" (click)="toggleOption('option2')">Income</a>
+      </div>
       <fieldset class="title">
         <legend>Title <span></span></legend>
         <input type="text" formControlName="title" id="title">
