--- a/src/app/main/sidebar/tr-edit/tr-edit.component.html
+++ b/src/app/main/sidebar/tr-edit/tr-edit.component.html
@@ -40,6 +40,12 @@
         <legend>Description</legend>
         <input type="text" formControlName="description" id="description" required placeholder="Describtion">
       </fieldset>
+      <div class="imageUpload">
+        <div class="img">
+          <img src="src/assets/icons/image-placeholder.png" alt="imagePlaceholder">
+        </div>
+      </div>
+
     </div>
     <button type="submit" (click)="onSubmit()">Submit</button>
   </form>
