--- a/src/app/main/sidebar/tr-edit/tr-edit.component.css
+++ b/src/app/main/sidebar/tr-edit/tr-edit.component.css
@@ -53,3 +53,34 @@ input, select{
   font-size: 16px;
   color:#000;
 }
+#imageUpload{
+  display: flex;
+}
+.img img{
+  display: flex;
+  align-items:flex-start;
+  flex-direction: column;
+  margin-right: 23px;
+  border-radius: 10px;
+}
+.img p{
+  padding-left: 5px;
+}
+.add_image{
+  width: 90px;
+  height: 71px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px dashed #000000;
+  border-radius: 10px;
+  font-weight: 700;
+  font-size: 32px;
+  cursor: pointer;
+}
+.imageName {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow:ellipsis;
+  max-width: 85px; /* Adjust the value as per your requirements */
+}
